k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-todo
  template:
    metadata:
      labels:
        app: django-todo
    spec:
      containers:
      - name: django-todo
        image: isaurabhg/todo_app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        command: ["sh", "-c"]
        args: ["python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
