k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-todo
spec:
  selector:
    app: django-todo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80        # service port
      targetPort: 8000  # container port
